# nanobots

./: Cargo.toml  README.md
crates/bot/: Cargo.toml
crates/bot/src/: lib.rs
crates/commands/src/: distance.rs  lib.rs
crates/console/: Cargo.toml
crates/console/src/: main.rs
crates/mdl/: Cargo.toml
crates/mdl/src/: lib.rs
crates/nbt/: Cargo.toml
crates/nbt/src/: lib.rs
crates/solvers/: Cargo.toml
crates/solvers/src/: lib.rs  simple_solver.rs
crates/state/: Cargo.toml
crates/state/src/: lib.rs
crates/ui/: Cargo.toml
crates/ui/assets/shaders/: instancing.wgsl
crates/ui/src/: camera.rs  cube.rs  cube_mesh.rs  instancing.rs  main.rs  model.rs  trace.rs
